Update label css

--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
       <a>Recent</a>
       <a>Archive</a>
       <a>About</a>
-      <a href="javascript:void(0);" class="icon" onclick="navFunction()">
-        <i class="fa fa-bars"></i>
-      </a>
     </div>
     <div class="container">
       <header>
@@ -144,7 +141,7 @@
 
           <!-- Input field for the comment user's name, email and website, with option to save the data for future comment -->
           <div id="comment_user_info_form">
-            <label for="name">Enter your name</label>
+            <label for="name" class="user_info_form_label">Enter your name</label>
             <input
               aria-level="Enter your name"
               class="user_info_form"
@@ -154,7 +151,7 @@
               placeholder="Ex. John Doe"
             />
 
-            <label for="email">Enter your email</label>
+            <label for="email" class="user_info_form_label">Enter your email</label>
             <input
               aria-level="Enter your email"
               class="user_info_form"
